# Backend_Delta

./: CMakeLists.txt  CMakeLists.txt.user.754832e  README.md  api.cpp  api.h  auth_routes.cpp  auth_routes.h  calendar_routes.cpp  calendar_routes.h  dashboard_routes.cpp  dashboard_routes.h  database_manager.cpp  database_manager.h  exams_routes.cpp  exams_routes.h  forum_routes.cpp  forum_routes.h  jwt_helper.cpp  jwt_helper.h  leaderboard_routes.cpp  leaderboard_services.cpp  leaderboard_services.h  main.cpp  notebooks_routes.cpp  notebooks_routes.h  problems_routes.cpp  problems_routes.h  ranking_routes.cpp  ranking_routes.h  response_utils.cpp  response_utils.h  visualizations_routes.cpp  visualizations_routes.h
